# pdi-final

./: .gitignore  ApresentacaoPDI.pptx  CMakeLists.txt  README.md  atualizacao.tex  bibliography.bib  capa.tex  database.csv  main.tex  makefile  nomes.tex  packages.tex  requeriments.txt  setup.tex
Eigenfaces/: Makefile  eigenfaces.cpp
conteudo/: abstract.tex  conteudo.tex
